@@ -18,10 +18,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>geomesa</groupId>
-    <artifactId>geomesa</artifactId>
+    <artifactId>geomesa-accumulo1.5</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>GeoMesa</name>
+    <name>GeoMesa - [Accumulo 1.5.x]</name>
 
     <modules>
         <module>geomesa-utils</module>
@@ -41,14 +41,14 @@
 
         <!-- environment-dependent versions -->
         <zookeeper.version>3.3.6</zookeeper.version>
-        <accumulo.version>1.5.0</accumulo.version>
+        <accumulo.version>1.5.1</accumulo.version>
         <hadoop.version>2.2.0</hadoop.version>
 
         <!-- logging properties
              we expect logging jars to be provided -->
         <!-- accumulo 1.4.3 is incompatible with a 1.5.6+ version of slf4j -->
         <!-- 1.7.x is for hadoop 2 and accumulo 1.5.x -->
-        <slf4j.version>1.7.1</slf4j.version>
+        <slf4j.version>1.7.5</slf4j.version>
         <logback.version>1.1.1</logback.version>
         <scalalogging.version>1.1.0</scalalogging.version>
 
@@ -61,33 +61,18 @@
         <!-- testing properties -->
         <maven.test.jvmargs>-Xms1g -Xmx2g -XX:MaxPermSize=512m -XX:-UseGCOverheadLimit</maven.test.jvmargs>
         <fork.mode>once</fork.mode>
+        <avro.version>1.7.5</avro.version>
     </properties>
 
     <profiles>
         <profile>
-            <id>accumulo1.5.1</id>
-            <modules>
-                <module>geomesa-shell</module>
-            </modules>
+            <id>debug-tests</id>
             <properties>
-                <accumulo.version>1.5.1-SNAPSHOT</accumulo.version>
+                <maven.test.jvmargs>-Xms1g -Xmx2g -XX:MaxPermSize=512m -XX:-UseGCOverheadLimit -Xrunjdwp:transport=dt_socket,address=5000,server=y,suspend=y</maven.test.jvmargs>
             </properties>
-            <dependencyManagement>
-                <dependencies>
-                    <dependency>
-                        <groupId>geomesa</groupId>
-                        <artifactId>geomesa-shell</artifactId>
-                        <version>${project.version}</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>cascading.accumulo</groupId>
-                        <artifactId>accumulo-scalding</artifactId>
-                        <version>2.0-SNAPSHOT</version>
-                    </dependency>
-                </dependencies>
-            </dependencyManagement>
         </profile>
     </profiles>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -236,33 +221,38 @@
                 <version>1.1</version>
             </dependency>
             <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-vfs2</artifactId>
+                <version>2.0</version>
+            </dependency>
+            <dependency>
                 <groupId>geomesa</groupId>
-                <artifactId>geomesa-core</artifactId>
+                <artifactId>geomesa-core-accumulo1.5</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>geomesa</groupId>
-                <artifactId>geomesa-utils</artifactId>
+                <artifactId>geomesa-utils-accumulo1.5</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>geomesa</groupId>
-                <artifactId>geomesa-filter</artifactId>
+                <artifactId>geomesa-filter-accumulo1.5</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>geomesa</groupId>
-                <artifactId>geomesa-plugin</artifactId>
+                <artifactId>geomesa-plugin-accumulo1.5</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>geomesa</groupId>
-                <artifactId>geomesa-distributed-runtime</artifactId>
+                <artifactId>geomesa-distributed-runtime-accumulo1.5</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
                 <groupId>geomesa</groupId>
-                <artifactId>geomesa-plugin</artifactId>
+                <artifactId>geomesa-plugin-accumulo1.5</artifactId>
                 <classifier>geoserver-plugin</classifier>
                 <version>${project.version}</version>
             </dependency>
@@ -293,17 +283,14 @@
                 <version>${accumulo.version}</version>
                 <scope>provided</scope>
                 <exclusions>
-                    <!-- needed for shapefile ingest through scala repl in the interactive environment
                     <exclusion>
                         <groupId>org.slf4j</groupId>
                         <artifactId>slf4j-log4j12</artifactId>
-                    </exclusion>-->
-                    <!-- we should exclude this, but accumulo has source-level references
-                         to log4j so scala won't compile without it
+                    </exclusion>
                     <exclusion>
                         <groupId>log4j</groupId>
                         <artifactId>log4j</artifactId>
-                    </exclusion>-->
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
@@ -347,6 +334,18 @@
                         <groupId>org.mortbay.jetty</groupId>
                         <artifactId>jsp-2.1</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>hsqldb</groupId>
+                        <artifactId>hsqldb</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
@@ -372,7 +371,7 @@
             <dependency>
                 <groupId>org.apache.avro</groupId>
                 <artifactId>avro</artifactId>
-                <version>1.7.5</version>
+                <version>${avro.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.geoserver</groupId>
@@ -391,11 +390,29 @@
                 <artifactId>gs-web-core</artifactId>
                 <version>${geoserver.version}</version>
                 <scope>provided</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.slf4j</groupId>
+                        <artifactId>slf4j-log4j12</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.geotools</groupId>
                 <artifactId>gt-epsg-hsql</artifactId>
                 <version>${gt.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <!-- needed to make everything compile because accumulo & hadoop have
+                 source level references to log4j classes which scala compiler needs -->
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>log4j-over-slf4j</artifactId>
+                <version>${slf4j.version}</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -427,6 +444,14 @@
         </dependencies>
     </dependencyManagement>
 
+    <dependencies>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
     <build>
 
         <pluginManagement>
@@ -445,6 +470,16 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>2.3.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-shade-plugin</artifactId>
+                    <version>2.2</version>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -487,7 +522,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.12.4</version>
+                <version>2.17</version>
                 <configuration>
                     <forkMode>${fork.mode}</forkMode>
                     <includes>
@@ -509,9 +544,9 @@
     </build>
 
     <scm>
-        <connection>scm:git:git@github.com:geomesa/geomesa.git</connection>
-        <developerConnection>scm:git:git@github.com:geomesa/geomesa.git</developerConnection>
-        <url>https://github.com/geomesa/geomesa</url>
+        <connection>scm:git:git@github.com:locationtech/geomesa.git</connection>
+        <developerConnection>scm:git:git@github.com:locationtech/geomesa.git</developerConnection>
+        <url>https://github.com/locationtech/geomesa</url>
         <tag>HEAD</tag>
     </scm>
 
